<resources>
    <string name="app_name">Book App</string>
    <string name="title_activity_add_page_test">AddPageTest</string>
    <string name="text">Title:</string>
    <string name="author">Author:</string>
    <string name="bn">Book Name</string>
    <string name="an">Author Name</string>
    <string name="add">Add Book</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update Book</string>
    <string name="list">List of Books</string>
    <string name="delete"> Delete Book</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_new_book">Add New Book</string>
    <string name="title_pride_and_prejudice">Title: Pride and Prejudice</string>
    <string name="author_jane_austen">Author: Jane Austen</string>
    <string name="book_title_example">Pride and Prejudice</string>
</resources>
